--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.1",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
-    "pg": "^8.11.5",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -53,6 +55,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.0",
+    "tailwindcss": "^3.4.3",
+    "tsx": "^4.19.2"
   }
 }
