chore: fixed signup

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -14,3 +14,4 @@ JWT_LIFETIME=1d
 #Add credentials
 #eg : postgres://jey:root@localhost:5432/sample_db
 DATABASE_URL=postgres://<username>:<password>@<host>/<data_base>
+#ensure to add ssl while connecting to database
