--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
+    "nvm": "^0.0.4",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
