--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,13 @@
     "http-status-codes": "^2.3.0",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.485.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
