--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,10 +47,12 @@
     "zustand": "^5.0.3"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "run": "nodemon app.js",
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": [
@@ -71,6 +73,12 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.1.0"
   }
 }
