--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,11 +36,12 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "run": "nodemon app.js"
+    "run": "nodemon app.js",
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +62,12 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.1.0"
   }
 }
