--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "stripe": "^15.7.0",
     "styled-components": "^6.1.11",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
