--- a/backend/package.json
+++ b/backend/package.json
@@ -57,9 +57,11 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.0",
     "tailwindcss": "^3.4.3",
     "tsx": "^4.19.2"
-  }
+  },
+  "type": "commonjs"
 }
