Updated readme and fixed the schema.js file

--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -5,3 +5,9 @@ REACT_APP_BUSINESS_NAME = <Your business name>
 REACT_APP_YOUR_NAME = <Enter your name>
 REACT_APP_EMAIL = <Your Email ID>
 REACT_APP_CONTACT = <Phone number>
+
+#These are supabase credentials, you need to create a supabase project first to use the application.
+REACT_APP_SUPABASE_PROJECT = <Your Supabse Project>
+REACT_APP_SUPABASE_ANONKEY = <Supabase Anon key>
+REACT_APP_HOST_ENDPOINT = <Backend_EndPoint>
+REACT_APP_JWT_SECRET = <JWT secret for hashing>
